// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeeSwitcher should match snapshot when account is enabled  1`] = `
<DocumentFragment>
  <div
    class="sc-jsJBEP bMsNfn"
    data-testid="feeSwitcher"
  >
    <div
      class="sc-bmzYkS eJWQqt"
    >
      <p
        class="sc-imWYAI dZiXLh sc-iHGNWf gGjZnE"
      >
        Fee
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall sc-koXPp fTnsXJ css-ptiqhd-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="HelpOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
        />
      </svg>
    </div>
    <div
      class="sc-eldPxv iwWLOO dropdown sc-dtBdUo dBsbYM"
      data-testid="dropdown-"
    >
      <div
        class="sc-fPXMVe gdBXJA dropdown sc-dtBdUo dBsbYM"
      >
        <div
          class="sc-dAbbOL cqwCvP"
        >
          <div
            class="sc-gFqAkR fCKkBB"
          >
            <img
              alt="token"
              src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/undefined.svg"
              width="20px"
            />
          </div>
          <p
            class="sc-imWYAI dZiXLh"
          />
          <div
            class="sc-hmdomO kXTVvG dropdown sc-dtBdUo dBsbYM"
          >
            <div>
              <div
                data-src="arrowdown.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeeSwitcher should match snapshot when account is not enabled  1`] = `
<DocumentFragment>
  <div
    class="sc-jsJBEP bMsNfn"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall sc-koXPp fTnsXJ css-ptiqhd-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="HelpOutlineIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
      />
    </svg>
    <h5
      class="sc-eDPEul lkHkUy sc-eeDRCY bYqsCg"
    >
      Fee
    </h5>
  </div>
</DocumentFragment>
`;
